<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/selection_search" />

    <item
        android:id="@+id/action_reservation"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_reservation_black_24dp"
        android:title="@string/selection_reservation" />

    <item
        android:id="@+id/action_mypage"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_mypage_black_24dp"
        android:title="@string/selection_mypage" />

    <item
        android:id="@+id/action_setting"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/selection_setting" />

</menu>